--- a/SpringMVCLearning/pom.xml
+++ b/SpringMVCLearning/pom.xml
@@ -59,6 +59,14 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>7.0.5.Final</version>
+    </dependency>
+
+
 
 
   </dependencies>
