--- a/SpringMVCLearning/pom.xml
+++ b/SpringMVCLearning/pom.xml
@@ -66,6 +66,13 @@
       <version>7.0.5.Final</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.30</version>
+    </dependency>
+
 
 
 
